# MycrOS

./: .gdbinit  .gitignore  GNUmakefile  README.md  limine.cfg  limine.conf  rust-toolchain.toml  x.asm  x86_64-unknown-kernel.json
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: alloc_frame.rs  alloc_page.rs  boot.rs  cpu_data.rs  cpulocal.rs  debug.rs  display.rs  exception.rs  framebuffer.rs  gdt.rs  heap.rs  idt.rs  layout.rs  logger.rs  main.rs  mapper.rs  print.rs  process.rs  proot.rs  stack.rs
kernel/src/arch/: mod.rs
kernel/src/arch/common/: mapping.rs  memory.rs  mod.rs  physptr.rs  volatile.rs
kernel/src/arch/stub/: mod.rs
kernel/src/arch/x86_64/: debug.rs  mod.rs  percpu.rs  pmm.rs  vmm.rs
kernel/src/arch/x86_64/paging/: tables.rs
kernel/src/arch/x86_64/registers/: control.rs  model_specific.rs
kernel/src/arch/x86_64/structures/: gdt.rs  idt.rs  isr.asm  mod.rs  paging.rs  tss.rs
kernel/src/boot/: limine.rs  mod.rs  stub.rs
kernel/src/mem/: mapping.rs  mod.rs  paging.rs  phys.rs  physptr.rs
kernel/src/mem/mapping/: x86_64.rs
kernel/src/x86_64/: mod.rs  registers.rs
kernel/src/x86_64/registers/: mod.rs
kernel/src/x86_64/structures/: isr.asm
mycro_lib/: Cargo.toml
mycro_lib/src/: io.rs  lib.rs
