[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_unsafe = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }

missing_safety_doc = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_used = "warn"

cast_possible_truncation = "allow"
module_name_repetitions = "allow"

[dependencies]
limine = "0.2.0"
log = "0.4.21"
x86_64 = "0.15.1"
spin = "0.9.8"
volatile = "0.6.1"
bit_field = "0.10.2"
